force-app/main/default/objects/AI_Data_Extraction_Detail__c/AI_Data_Extraction_Detail__c.object-meta.xml
<CustomObject>
    <label>Data Context Detail</label>
    <nameField>
        <label>Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Context Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>