force-app/main/default/objects/AI_Data_Extraction_Detail__c/fields/Object_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Object_Hierarchy__c</fullName>
    <label>Object Hierarchy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>