force-app/main/default/objects/AI_Data_Extraction_Detail__c/fields/Order_By__c.field-meta.xml
<CustomField>
    <fullName>Order_By__c</fullName>
    <label>Order By</label>
    <length>10</length>
    <type>Text</type>
</CustomField>