force-app/main/default/objects/AI_Data_Extraction_Detail__c/fields/Parent_Detail__c.field-meta.xml
<CustomField>
    <fullName>Parent_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Detail</label>
    <referenceTo>AI_Data_Extraction_Detail__c</referenceTo>
    <relationshipName>AI_Data_Extraction_Details</relationshipName>
    <type>Lookup</type>
</CustomField>