force-app/main/default/objects/AI_Data_Extraction_Detail__c/fields/RelationshipField__c.field-meta.xml
<CustomField>
    <fullName>RelationshipField__c</fullName>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>