force-app/main/default/objects/AI_Data_Extraction_Detail__c/fields/RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipName__c</fullName>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>