force-app/main/default/objects/AI_Data_Extraction_Detail__c/fields/Running_Index__c.field-meta.xml
<CustomField>
    <fullName>Running_Index__c</fullName>
    <label>Running Index</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>